packages/ibm-products-web-components/src/components/page-header/page-header.scss
/* ... */
:host(#{$prefix}-page-header-breadcrumb:not([content-actions-flush]))
  ::slotted([slot='content-actions']) {
  //stylelint-disable declaration-no-important
  margin-inline-end: $spacing-04 !important;
}

:host(#{$prefix}-page-header-breadcrumb[page-actions-flush]) {
  .#{$carbon-prefix}--css-grid {
    margin-inline-end: 0;
    padding-inline-end: 0;
  }

  .#{$carbon-prefix}--css-grid-column {
    margin-inline-end: 0;
  }
}

:host(#{$prefix}-page-header-breadcrumb[border='true']) {
  border-block-end: 1px solid $border-subtle-01;
  // TODO: remove above styles when styles from React have been migrated
  // and use the extend below

  // @extend .#{$prefix}--page-header__breadcrumb-bar-border;
}

:host(#{$prefix}-page-header-content) {
  padding: $spacing-06 0;
  // TODO: remove above styles when styles from React have been migrated
  // and use the extend below
  // @extend .#{$prefix}--page-header__content;

  .#{$prefix}--page-header__content__title {
    @include type-style('productive-heading-04');

    display: -webkit-box;
    overflow: hidden;
    // TODO: remove above styles when styles from React have been migrated
    // and use the extend below
    // @extend .#{$prefix}--page-header__content__title;
    margin: 0;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    max-inline-size: convert.to-rem(640px);
    text-overflow: ellipsis;
    white-space: normal;
  }

  .#{$prefix}--page-header__content__title-wrapper {
    // TODO: remove this section
    @include breakpoint-down(md) {
      display: flex;
      flex-direction: column;
      grid-gap: $spacing-05;
    }

    display: grid;
    gap: $spacing-05;
    ///////////////////////////////

    // overriding until the responsive behavior is implemented
    grid-template-columns: auto minmax(auto, auto);
    margin-block-end: $spacing-05;
    min-block-size: convert.to-rem(40px);
  }

  // TODO: remove this section
  .#{$prefix}--page-header__content__start {
    display: flex;
    flex-wrap: wrap;
    gap: $spacing-05;
  }

  .#{$prefix}--page-header__content__page-actions {
    display: flex;
    justify-content: right;
    /* stylelint-disable-next-line carbon/motion-easing-use */
    transition: opacity motion(standard, productive) $duration-moderate-02;

    &.#{$prefix}--page-header__content__page-actions--clipped {
      opacity: 0;
      visibility: hidden;
    }

    @include breakpoint-down('md') {
      justify-content: left;
      margin-block-start: 0;
    }
  }

  .#{$prefix}--page-header__content__title-container {
    display: flex;
  }
  ///////////////////////////////
  ::slotted([slot='icon']) {
    margin-inline-end: $spacing-05;
    // TODO: remove above styles when styles from React have been migrated
    // and use the extend below
    // @extend .#{$prefix}--page-header__content__icon;
  }

  ::slotted([slot='contextual-actions']) {
    display: flex;
    // TODO: remove above styles when styles from React have been migrated
    // and use the extend below
    // @extend .#{$prefix}--page-header__content__contextual-actions;
  }
}

:host(#{$prefix}-page-header-content[contextual-actions]) {
  .#{$prefix}--page-header__content__title {
    -webkit-line-clamp: 1;
  }
}

:host(#{$prefix}-page-header-content[contextual-actions]) {
  .#{$prefix}--page-header__content__title {
    -webkit-line-clamp: 1;
  }
}

:host(#{$prefix}-page-header-content-text) {
  @include type-style('body-01');
  // TODO: remove above styles when styles from React have been migrated
  // and use the extend below
  // @extend .#{$prefix}--page-header__content__body;
  display: block;
  margin-block-start: $spacing-05;
  max-inline-size: convert.to-rem(640px);

  .#{$prefix}--page-header__content__subtitle {
    @include type-style('productive-heading-03');

    margin-block-end: $spacing-03;
    // TODO: remove above styles when styles from React have been migrated
    margin-block-start: 0;
  }
}

:host(#{$prefix}-page-header-hero-image) {
  // TODO: remove above styles when styles from React have been migrated
  // and use the extend below
  // @extend .#{$prefix}--page-header__hero-image;
  position: relative;
  display: flex;
  overflow: hidden;
  align-items: center;
  justify-content: flex-end;
  block-size: 100%;
}

:host(#{$prefix}-page-header-hero-image)::before {
  block-size: 0;
  content: '';
  float: inline-start;
  inline-size: 1px;
  margin-inline-start: -1px;

  padding-block-start: math.percentage(math.div(2, 3));

  @include grid.breakpoint-up('lg') {
    padding-block-start: math.percentage(math.div(1, 2));
  }
}

:host(#{$prefix}-page-header-hero-image)::after {
  display: table;
  clear: both;
  content: '';
}

:host(#{$prefix}-page-header-tabs) {
  // TODO: remove above styles when styles from React have been migrated
  // and use the extend below
  // @extend .#{$prefix}--page-header__tab-bar;
  .#{$carbon-prefix}--css-grid .#{$carbon-prefix}--css-grid-column {
    margin: 0;
  }
}

:host(#{$prefix}-page-header-tabs) .#{$prefix}--page-header__tab-bar--tablist {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  inline-size: 100%;
}

:host(#{$prefix}-page-header-tabs) ::slotted([slot='tags']) {
  display: flex;
  align-items: center;
  justify-content: right;
  inline-size: 100%;
  max-inline-size: 500px;
  // TODO: remove above styles when styles from React have been migrated
  // and use the extend below
  // @extend .#{$prefix}--page-header__tags;
}

:host(#{$prefix}-page-header-tabs) ::slotted([slot='scroller']) {
  position: absolute;
  inset-inline-end: 0;
}

:host(#{$prefix}-page-header-breadcrumb),
:host(#{$prefix}-page-header-content),
:host(#{$prefix}-page-header-tabs) {
  .#{$carbon-prefix}--css-grid {
    inline-size: initial;
  }
}

#{$carbon-prefix}-definition-tooltip::part(definition-term) {
  border: none;
}

:host(#{$prefix}-page-header-tabs) ::slotted(#{$carbon-prefix}-tabs) {
  --tabs-overflow-button-background: $layer-01;
}
/* ... */

